# rags-to-riches

./: .gitignore  README.md  app.py  frontend.py  pyproject.toml
core/: utils.py
core/chunkers/: BaseChunker.py  FixedTokenSizeChunker.py
core/embedders/: BaseEmbedder.py  OpenAIEmbedder.py
core/generators/: BaseGenerator.py  OpenAIGenerator.py
core/parsers/: BaseParser.py  HtmlParser.py  NotebookParser.py  PdfParser.py  QACsvParser.py
core/pipelines/: BasePipeline.py
core/retrievers/: BaseRetriever.py  TopKRetriever.py
core/vector_stores/: BaseVectorStore.py  ChromaVectorStore.py  PineconeVectorStore.py
data/input/full/exercises/: SFU NLP class_ The Philae Obelisk.html  SFU NLP class_ word2vec.html
data/input/full/ground_truths/: ground_truth_accuracy.json  ground_truth_retrieval.json
data/input/full/notebooks/: goldberg.ipynb  promptgen.ipynb  tidbits.ipynb  transformer_sizing.ipynb
data/input/full/qas/: midterm-questions-1.csv  midterm-questions-2.csv
data/input/full/references/: AI and compute _ OpenAI.html  (+13 more)
experiments/: chunker.ipynb  embedder.ipynb  openai-api-calls.ipynb  pipeline-test.ipynb  rag.ipynb  run_experiment.py
experiments/configs/base/: experiment.yaml  generator.yaml  parsers.yaml  retriever.yaml  vector_store.yaml
experiments/configs/chroma/: chunker.yaml  embedder.yaml  experiment.yaml  generator.yaml  vector_store.yaml
experiments/notebooks/: chroma-vector-database.ipynb  doc-parser.ipynb  vector-database.ipynb  visualizations.ipynb
experiments/prompts/base/: qa.txt
experiments/prompts/chroma/: qa-new.txt
(+3 files in other folders)
