[project]
name = "rags-to-riches"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad Al Fayad Chowdhury",email = "fayad.chowdhury@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "openai (>=1.107.2,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pymupdf4llm (>=0.0.27,<0.0.28)",
    "pypdf (>=6.0.0,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pinecone (>=7.3.0,<8.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "boilerpy3 (>=1.0.7,<2.0.0)",
    "streamlit (>=1.49.1,<2.0.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "mlflow (>=3.3.2,<4.0.0)",
    "chromadb (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
